--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="author" content="MIRAINA">
     <title>About Us | MIRAINA</title>
     <meta name="description" content="MIRAINAの会社概要・ビジョン・メンバー紹介ページ。生成AI導入支援・AI開発・AI人材育成を通じて中小企業の未来を創造します。">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
                     <li><a href="/about.html" class="nav-link">会社情報</a></li>
-                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/works.html" class="nav-link">事例紹介</a></li>
                     <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
                     <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
@@ -36,37 +36,56 @@
         <ul>
             <li><a href="/services.html">サービス</a></li>
             <li><a href="/about.html">会社情報</a></li>
-            <li><a href="/works.html">実績</a></li>
+            <li><a href="/works.html">事例紹介</a></li>
             <li><a href="/blogs.html">ブログ</a></li>
             <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
     </nav>
     <main>
-        <section class="about-section container" style="margin-top: 120px; margin-bottom: 80px;">
-            <div class="section-header">
-                <h2 class="section-title">About Us</h2>
-                <p class="section-description">MIRAINAについて</p>
+        <div class="about-header">
+            <div class="about-header-content">
+                <h2 class="about-main-title">私たちについて</h2>
+                <p class="about-subtitle">MIRAINAのミッション・ビジョン・バリュー</p>
             </div>
-            <div class="about-content" style="max-width: 800px; margin: 0 auto;">
-                <h3 style="font-size: 2rem; margin-bottom: 1rem;">ビジョン</h3>
-                <p style="margin-bottom: 2rem;">MIRAINAは「AIで中小企業の未来を創造する」をミッションに掲げ、生成AI導入支援・AI開発・AI人材育成を通じて、企業の成長と社会の発展に貢献します。</p>
-                <h3 style="font-size: 2rem; margin-bottom: 1rem;">事業内容</h3>
-                <ul style="margin-bottom: 2rem; padding-left: 1.5rem;">
-                    <li>・生成AI導入コンサルティング</li>
-                    <li>・AIシステム・チャットボット開発</li>
-                    <li>・AI人材育成・研修</li>
-                </ul>
-                <h3 style="font-size: 2rem; margin-bottom: 1rem;">会社概要</h3>
-                <table style="width:100%; max-width:500px; margin-bottom:2rem;">
-                    <tr><th style="text-align:left; width:120px;">会社名</th><td>MIRAINA</td></tr>
-                    <tr><th style="text-align:left;">設立</th><td>2024年4月</td></tr>
-                    <tr><th style="text-align:left;">代表</th><td>芝 優作</td></tr>
-                    <tr><th style="text-align:left;">所在地</th><td>福岡県福岡市</td></tr>
-                </table>
-                <h3 style="font-size: 2rem; margin-bottom: 1rem;">メンバー紹介</h3>
-                <ul style="margin-bottom: 2rem; padding-left: 1.5rem;">
-                    <li>・芝 優作（代表/AIコンサルタント）</li>
-                </ul>
+        </div>
+        <section class="about-vision-block">
+            <h3 class="about-vision-title">Our Vision</h3>
+            <p class="about-vision-catch">AI導入で「週休4日制」が当たり前になる未来を、九州から全国へ。</p>
+        </section>
+        <!-- メインビジュアル画像（仮） -->
+        <div class="about-main-visual">
+            <img src="/images/about-main-visual.jpg" alt="MIRAINA 会社イメージ画像（仮）" style="width:100%; max-width:1200px; height:auto; display:block; margin: 0 auto 40px auto; border-radius:18px; box-shadow:0 8px 32px rgba(30,144,255,0.10);">
+        </div>
+        <!-- Vision説明文（中央揃え） -->
+        <div class="about-vision-desc" style="text-align:left; max-width:800px; margin:0 auto 36px auto;">
+            <p style="font-size:1.25rem; color:#333; margin-bottom:0.7em;">MIRAINAは、AIの力で働き方を根本から変革し、誰もが自分らしい人生を楽しめる社会を目指しています。</p>
+            <p style="font-size:1.25rem; color:#333;">九州から全国へ、新しい未来の働き方を広げていきます。</p>
+        </div>
+        <section class="about-section container">
+            <div class="about-content" style="max-width: 900px; margin: 0 auto; text-align:left;">
+                <p style="font-size:1.6rem; margin-bottom:2.5rem;">MIRAINA（ミライナ）は、福岡を拠点に九州全域のお客さまを対象としたAI導入支援サービスを提供しています。急速に進化する生成AIや業務効率化ツールを活用することで、クライアント企業様の売上アップと業務時間削減の両立を実現し、働き方改革を後押しします。単なるツール導入にとどまらず、「利益の最大化」と「時間的余裕の創出」を同時に叶え、お客さまが豊かな人生を謳歌できる環境をつくることこそが、私たちの使命です。</p>
+
+                <section class="mvv-section" style="margin-bottom:3.5rem;">
+                    <h3 class="section-title" style="font-size:2.2rem; margin-bottom:1.2rem;">Mission［使命］</h3>
+                    <p style="font-weight:bold; font-size:1.3rem; color:#1976d2; margin-bottom:1rem;">売上UP・業務時間削減の両立を</p>
+                    <p style="margin-bottom:1.5rem;">私たちの使命は、AI導入支援を通じてクライアント様が十分な利益を確保しつつ業務時間を短縮できるようサポートし、その結果生まれた利益と時間を使って、豊かな人生を謳歌できる環境をつくることです。 単なる効率化にとどまらず、企業と社員がともに成長し、心身ともに充実した未来を実現するために、最後まで伴走し続けます。</p>
+                </section>
+
+                <section class="mvv-section" style="margin-bottom:3.5rem;">
+                    <h3 class="section-title" style="font-size:2.2rem; margin-bottom:1.2rem;">Vision［ビジョン］</h3>
+                    <p style="font-weight:bold; font-size:1.3rem; color:#1976d2; margin-bottom:1rem;">AI導入で週休4日制を浸透させる</p>
+                    <p style="margin-bottom:1.5rem;">私たちは、福岡を中心に九州地区で「AI導入支援＝MIRAINA」と言われる存在を目指します。単にAIツールを導入するだけで終わらせるのではなく、お客さまご自身が自社でAIを自律的に活用できる体制を整え、業務プロセスを根本から変革します。その先にあるのは、「週休4日制」が当たり前となる働き方改革です。成果を着実に出しながら、働く時間を大幅に減らす。私たちは、その未来を九州を起点に、この新しい働き方改革を全国へ届けていきます。</p>
+                </section>
+
+                <section class="mvv-section" style="margin-bottom:3.5rem;">
+                    <h3 class="section-title" style="font-size:2.2rem; margin-bottom:1.2rem;">Values［価値観］</h3>
+                    <ol style="margin-bottom:2rem; padding-left:1.5rem;">
+                        <li style="margin-bottom:1.2rem;"><strong>"目先の効率化"に止まらない長期視点</strong><br>
+                            AIの真価は、組織全体が自律的にAIを活用できる状態でこそ発揮されます。私たちは目先の業務効率化にとどまらず、導入後もお客さま自身がAIの活用幅を広げられる仕組み構築と知識提供を行います。</li>
+                        <li style="margin-bottom:1.2rem;"><strong>クライアント目線の伴走スタイル</strong><br>
+                            私たちはお客さまの現在の課題を丁寧にヒアリングし、最適なAIソリューションをご提案。導入後も定期的なフォローやスキル研修を重ねることで、実務レベルでの「使えるAI」を定着させます。</li>
+                    </ol>
+                </section>
             </div>
         </section>
     </main>
@@ -79,7 +98,7 @@
                 <ul>
                     <li><a href="/services.html">サービス</a></li>
                     <li><a href="/about.html">会社情報</a></li>
-                    <li><a href="/works.html">実績</a></li>
+                    <li><a href="/works.html">事例紹介</a></li>
                     <li><a href="/blogs.html">ブログ</a></li>
                     <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
