--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>お問い合わせ | MIRAINA - AI導入支援・研修・開発</title>
     <meta name="description" content="MIRAINAへのお問い合わせページです。生成AI導入支援、研修、カスタムAI開発に関するご相談を受け付けております。">
     <meta name="keywords" content="お問い合わせ,AI導入相談,生成AI,AI開発,企業支援">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
                     <li><a href="/about.html" class="nav-link">会社情報</a></li>
-                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/works.html" class="nav-link">事例紹介</a></li>
                     <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
                     <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
@@ -39,7 +39,7 @@
         <ul>
             <li><a href="/services.html">サービス</a></li>
             <li><a href="/about.html">会社情報</a></li>
-            <li><a href="/works.html">実績</a></li>
+            <li><a href="/works.html">事例紹介</a></li>
             <li><a href="/blogs.html">ブログ</a></li>
             <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
@@ -68,7 +68,7 @@
                 <ul>
                     <li><a href="/services.html">サービス</a></li>
                     <li><a href="/about.html">会社情報</a></li>
-                    <li><a href="/works.html">実績</a></li>
+                    <li><a href="/works.html">事例紹介</a></li>
                     <li><a href="/blogs.html">ブログ</a></li>
                     <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
