--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:title" content="MIRAINA | 生成AI導入支援・研修・AI開発事業">
     <meta name="twitter:description" content="MIRAINAは、生成AI導入支援・研修・AI開発事業を展開する企業です。中小企業の未来を創造するAIソリューションを提供します。">
     <meta name="twitter:image" content="/images/ogp.jpg">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
@@ -66,7 +66,7 @@
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
                     <li><a href="/about.html" class="nav-link">会社情報</a></li>
-                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/works.html" class="nav-link">事例紹介</a></li>
                     <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
                     <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
@@ -82,7 +82,7 @@
         <ul>
             <li><a href="/services.html">サービス</a></li>
             <li><a href="/about.html">会社情報</a></li>
-            <li><a href="/works.html">実績</a></li>
+            <li><a href="/works.html">事例紹介</a></li>
             <li><a href="/blogs.html">ブログ</a></li>
             <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
@@ -124,7 +124,7 @@
         <!-- <section class="works-section" id="works">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">実績</h2>
+                    <h2 class="section-title">事例紹介</h2>
                     <p class="section-description">様々な業種・業界のAI導入を<br>成功に導いた事例をご紹介します</p>
                 </div>
                 <div class="works-grid">
@@ -261,7 +261,7 @@
                 <ul>
                     <li><a href="/services.html">サービス</a></li>
                     <li><a href="/about.html">会社情報</a></li>
-                    <li><a href="/works.html">実績</a></li>
+                    <li><a href="/works.html">事例紹介</a></li>
                     <li><a href="/blogs.html">ブログ</a></li>
                     <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
