--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://miraina-ai.com/services">
     <meta property="og:image" content="/images/og-services.jpg">
     <meta property="og:site_name" content="MIRAINA">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
@@ -29,7 +29,7 @@
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
                     <li><a href="/about.html" class="nav-link">会社情報</a></li>
-                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/works.html" class="nav-link">事例紹介</a></li>
                     <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
                     <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
@@ -45,7 +45,7 @@
         <ul>
             <li><a href="/services.html">サービス</a></li>
             <li><a href="/about.html">会社情報</a></li>
-            <li><a href="/works.html">実績</a></li>
+            <li><a href="/works.html">事例紹介</a></li>
             <li><a href="/blogs.html">ブログ</a></li>
             <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
@@ -227,7 +227,7 @@
                 <ul>
                     <li><a href="/services.html">サービス</a></li>
                     <li><a href="/about.html">会社情報</a></li>
-                    <li><a href="/works.html">実績</a></li>
+                    <li><a href="/works.html">事例紹介</a></li>
                     <li><a href="/blogs.html">ブログ</a></li>
                     <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
