--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
     <meta name="author" content="MIRAINA">
     <title>ブログ一覧 | MIRAINA</title>
     <meta name="description" content="MIRAINAのブログ記事一覧ページ。AI導入・活用の最新情報や事例、ノウハウを発信しています。">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
                     <li><a href="/about.html" class="nav-link">会社情報</a></li>
-                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/works.html" class="nav-link">事例紹介</a></li>
                     <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
                     <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
@@ -36,7 +36,7 @@
         <ul>
             <li><a href="/services.html">サービス</a></li>
             <li><a href="/about.html">会社情報</a></li>
-            <li><a href="/works.html">実績</a></li>
+            <li><a href="/works.html">事例紹介</a></li>
             <li><a href="/blogs.html">ブログ</a></li>
             <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
@@ -115,7 +115,7 @@
                 <ul>
                     <li><a href="/services.html">サービス</a></li>
                     <li><a href="/about.html">会社情報</a></li>
-                    <li><a href="/works.html">実績</a></li>
+                    <li><a href="/works.html">事例紹介</a></li>
                     <li><a href="/blogs.html">ブログ</a></li>
                     <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
