--- a/works.html
+++ b/works.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="MIRAINA">
     <meta name="robots" content="index, follow">
-    <title>実績 | MIRAINA - AI導入支援・研修・AI開発事業</title>
-    <meta name="description" content="MIRAINAの実績紹介ページです。多くの企業様にAI導入支援・研修・開発サービスを提供し、業務効率化やDX推進に貢献しています。導入事例や顧客の声をご覧ください。">
-    <meta name="keywords" content="AI実績,導入事例,顧客の声,AI開発実績,生成AI導入,中小企業AI">
-    <meta property="og:title" content="実績 | MIRAINA - AI導入支援・研修・AI開発事業">
-    <meta property="og:description" content="MIRAINAの実績紹介ページです。多くの企業様にAI導入支援・研修・開発サービスを提供し、業務効率化やDX推進に貢献しています。導入事例や顧客の声をご覧ください。">
+    <title>事例紹介 | MIRAINA - AI導入支援・研修・AI開発事業</title>
+    <meta name="description" content="MIRAINAの事例紹介紹介ページです。多くの企業様にAI導入支援・研修・開発サービスを提供し、業務効率化やDX推進に貢献しています。導入事例や顧客の声をご覧ください。">
+    <meta name="keywords" content="AI事例紹介,導入事例,顧客の声,AI開発事例紹介,生成AI導入,中小企業AI">
+    <meta property="og:title" content="事例紹介 | MIRAINA - AI導入支援・研修・AI開発事業">
+    <meta property="og:description" content="MIRAINAの事例紹介紹介ページです。多くの企業様にAI導入支援・研修・開発サービスを提供し、業務効率化やDX推進に貢献しています。導入事例や顧客の声をご覧ください。">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://miraina.com/works">
     <meta property="og:image" content="./images/works/works-ogp.jpg">
     <meta property="og:site_name" content="MIRAINA">
-    <meta name="twitter:title" content="実績 | MIRAINA - AI導入支援・研修・AI開発事業">
-    <meta name="twitter:description" content="MIRAINAの実績紹介ページです。多くの企業様にAI導入支援・研修・開発サービスを提供し、業務効率化やDX推進に貢献しています。導入事例や顧客の声をご覧ください。">
+    <meta name="twitter:title" content="事例紹介 | MIRAINA - AI導入支援・研修・AI開発事業">
+    <meta name="twitter:description" content="MIRAINAの事例紹介紹介ページです。多くの企業様にAI導入支援・研修・開発サービスを提供し、業務効率化やDX推進に貢献しています。導入事例や顧客の声をご覧ください。">
     <meta name="twitter:image" content="./images/works/works-ogp.jpg">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
                     <li><a href="/about.html" class="nav-link">会社情報</a></li>
-                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/works.html" class="nav-link">事例紹介</a></li>
                     <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
                     <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
@@ -48,7 +48,7 @@
         <ul>
             <li><a href="/services.html">サービス</a></li>
             <li><a href="/about.html">会社情報</a></li>
-            <li><a href="/works.html">実績</a></li>
+            <li><a href="/works.html">事例紹介</a></li>
             <li><a href="/blogs.html">ブログ</a></li>
             <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
@@ -56,11 +56,11 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1 class="page-title">実績</h1>
+                <h1 class="page-title">事例紹介</h1>
                 <nav class="breadcrumb" aria-label="パンくずリスト">
                     <ol>
                         <li><a href="./index.html">ホーム</a></li>
-                        <li><span aria-current="page">実績</span></li>
+                        <li><span aria-current="page">事例紹介</span></li>
                     </ol>
                 </nav>
             </div>
@@ -98,7 +98,7 @@
         <section class="case-studies-section" aria-labelledby="case-studies-heading">
             <div class="container">
                 <h2 id="case-studies-heading" class="section-title">導入事例</h2>
-                <p class="section-description">AIを活用した業務効率化・生産性向上の実績をご紹介します</p>
+                <p class="section-description">AIを活用した業務効率化・生産性向上の事例紹介をご紹介します</p>
                 <div class="case-studies-grid">
                     <article class="case-study-card">
                         <div class="case-logo">
@@ -219,7 +219,7 @@
                 <ul>
                     <li><a href="/services.html">サービス</a></li>
                     <li><a href="/about.html">会社情報</a></li>
-                    <li><a href="/works.html">実績</a></li>
+                    <li><a href="/works.html">事例紹介</a></li>
                     <li><a href="/blogs.html">ブログ</a></li>
                     <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
