--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/about.css">
 </head>
 <body>
     <header class="site-header">
@@ -48,46 +48,75 @@
                 <p class="about-subtitle">MIRAINAのミッション・ビジョン・バリュー</p>
             </div>
         </div>
-        <section class="about-vision-block">
-            <h3 class="about-vision-title">Our Vision</h3>
-            <p class="about-vision-catch">AI導入で「週休4日制」が当たり前になる未来を、九州から全国へ。</p>
-        </section>
-        <!-- メインビジュアル画像（仮） -->
-        <div class="about-main-visual">
-            <img src="/images/about-main-visual.jpg" alt="MIRAINA 会社イメージ画像（仮）" style="width:100%; max-width:1200px; height:auto; display:block; margin: 0 auto 40px auto; border-radius:18px; box-shadow:0 8px 32px rgba(30,144,255,0.10);">
+        <div class="about-section-block">
+            <h2 class="about-section-title">Our Vision</h2>
+            <p class="about-section-catch">AI導入で「週休4日制」が当たり前になる未来を、九州から全国へ。</p>
+            <p class="about-section-desc">
+                MIRAINAは、AIの力で働き方を根本から変革し、<br>誰もが豊かな人生を謳歌できる環境をつくることを目指しています。<br>
+                九州から全国へ、新しい未来の働き方を広げていきます。
+            </p>
         </div>
-        <!-- Vision説明文（中央揃え） -->
-        <div class="about-vision-desc" style="text-align:left; max-width:800px; margin:0 auto 36px auto;">
-            <p style="font-size:1.25rem; color:#333; margin-bottom:0.7em;">MIRAINAは、AIの力で働き方を根本から変革し、誰もが自分らしい人生を楽しめる社会を目指しています。</p>
-            <p style="font-size:1.25rem; color:#333;">九州から全国へ、新しい未来の働き方を広げていきます。</p>
+
+        <div class="about-section-block">
+            <h2 class="about-section-title">Our Mission</h2>
+            <p class="about-section-catch">「AIで利益と効率を両立し、成長を加速するパートナーに」</p>
+            <p class="about-section-desc">
+                AI活用で利益の最大化と業務効率化を行い、<br>
+                それによって生み出された社内リソースを戦略的活動に再配分することで、<br>
+                組織全体の成長を加速させる
+            </p>
         </div>
-        <section class="about-section container">
-            <div class="about-content" style="max-width: 900px; margin: 0 auto; text-align:left;">
-                <p style="font-size:1.6rem; margin-bottom:2.5rem;">MIRAINA（ミライナ）は、福岡を拠点に九州全域のお客さまを対象としたAI導入支援サービスを提供しています。急速に進化する生成AIや業務効率化ツールを活用することで、クライアント企業様の売上アップと業務時間削減の両立を実現し、働き方改革を後押しします。単なるツール導入にとどまらず、「利益の最大化」と「時間的余裕の創出」を同時に叶え、お客さまが豊かな人生を謳歌できる環境をつくることこそが、私たちの使命です。</p>
 
-                <section class="mvv-section" style="margin-bottom:3.5rem;">
-                    <h3 class="section-title" style="font-size:2.2rem; margin-bottom:1.2rem;">Mission［使命］</h3>
-                    <p style="font-weight:bold; font-size:1.3rem; color:#1976d2; margin-bottom:1rem;">売上UP・業務時間削減の両立を</p>
-                    <p style="margin-bottom:1.5rem;">私たちの使命は、AI導入支援を通じてクライアント様が十分な利益を確保しつつ業務時間を短縮できるようサポートし、その結果生まれた利益と時間を使って、豊かな人生を謳歌できる環境をつくることです。 単なる効率化にとどまらず、企業と社員がともに成長し、心身ともに充実した未来を実現するために、最後まで伴走し続けます。</p>
-                </section>
-
-                <section class="mvv-section" style="margin-bottom:3.5rem;">
-                    <h3 class="section-title" style="font-size:2.2rem; margin-bottom:1.2rem;">Vision［ビジョン］</h3>
-                    <p style="font-weight:bold; font-size:1.3rem; color:#1976d2; margin-bottom:1rem;">AI導入で週休4日制を浸透させる</p>
-                    <p style="margin-bottom:1.5rem;">私たちは、福岡を中心に九州地区で「AI導入支援＝MIRAINA」と言われる存在を目指します。単にAIツールを導入するだけで終わらせるのではなく、お客さまご自身が自社でAIを自律的に活用できる体制を整え、業務プロセスを根本から変革します。その先にあるのは、「週休4日制」が当たり前となる働き方改革です。成果を着実に出しながら、働く時間を大幅に減らす。私たちは、その未来を九州を起点に、この新しい働き方改革を全国へ届けていきます。</p>
-                </section>
-
-                <section class="mvv-section" style="margin-bottom:3.5rem;">
-                    <h3 class="section-title" style="font-size:2.2rem; margin-bottom:1.2rem;">Values［価値観］</h3>
-                    <ol style="margin-bottom:2rem; padding-left:1.5rem;">
-                        <li style="margin-bottom:1.2rem;"><strong>"目先の効率化"に止まらない長期視点</strong><br>
-                            AIの真価は、組織全体が自律的にAIを活用できる状態でこそ発揮されます。私たちは目先の業務効率化にとどまらず、導入後もお客さま自身がAIの活用幅を広げられる仕組み構築と知識提供を行います。</li>
-                        <li style="margin-bottom:1.2rem;"><strong>クライアント目線の伴走スタイル</strong><br>
-                            私たちはお客さまの現在の課題を丁寧にヒアリングし、最適なAIソリューションをご提案。導入後も定期的なフォローやスキル研修を重ねることで、実務レベルでの「使えるAI」を定着させます。</li>
-                    </ol>
-                </section>
+        <div class="about-section-block">
+            <h2 class="about-section-title">OUR VALUES</h2>
+            <p style="font-size:1.2rem; color:#333; margin-bottom:2.5rem;">MIRAINAの5つの価値観</p>
+            <div class="about-values-cards">
+                <div class="about-values-card">
+                    <h3 class="about-values-card-title">Judicious Efficiency</h3>
+                    <strong class="about-values-card-strong">効率化の優先順位を見極める</strong>
+                    <ul class="about-values-card-list">
+                        <li>本当に自動化すべき業務かを確認し、必要ない部分は手作業で残す</li>
+                        <li>業務を減らしてもサービス品質や人間関係が損なわれないよう配慮する</li>
+                    </ul>
+                </div>
+                <div class="about-values-card">
+                    <h3 class="about-values-card-title">Empathy & Respect</h3>
+                    <strong class="about-values-card-strong">相手の立場に立ち、信頼を大切に</strong>
+                    <ul class="about-values-card-list">
+                        <li>クライアントの価値観や企業文化をしっかり理解して提案する</li>
+                        <li>AI導入が人間関係に悪影響を与えないよう、やさしいコミュニケーションを心がける</li>
+                    </ul>
+                </div>
+                <div class="about-values-card">
+                    <h3 class="about-values-card-title">Passionate Learning</h3>
+                    <strong class="about-values-card-strong">学びを大切に、成長を追求する</strong>
+                    <ul class="about-values-card-list">
+                        <li>好奇心を原動力に、新しい知識や技術を積極的に吸収する</li>
+                        <li>自己成長を通じて提供価値を高め、組織やクライアントに還元する</li>
+                    </ul>
+                </div>
             </div>
-        </section>
+        </div>
+        <!-- 会社概要ブロック ここから追加 -->
+        <div class="about-company-block">
+            <div class="about-company-content">
+                <h2 class="about-company-title">会社概要</h2>
+                <table class="about-company-table">
+                    <tr>
+                        <th>名称</th>
+                        <td>株式会社MIRAINA</td>
+                    </tr>
+                    <tr>
+                        <th>代表</th>
+                        <td>芝 優作</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="about-company-image">
+                <img src="images/original_ai_solution.png" alt="MIRAINA本社ビルのイメージ" />
+            </div>
+        </div>
+        <!-- 会社概要ブロック ここまで追加 -->
     </main>
     <footer class="site-footer">
         <div class="footer-container">
