--- a/services.html
+++ b/services.html
@@ -27,11 +27,11 @@
             <h1 class="site-logo"><a href="/index.html"><img src="/images/company-logo.png" alt="MIRAINAロゴ" class="logo-img"></a></h1>
             <nav class="global-nav">
                 <ul>
-                    <li><a href="/services.html" class="nav-link">サービス</a></li>
-                    <li><a href="/about.html" class="nav-link">会社情報</a></li>
-                    <li><a href="/works.html" class="nav-link">事例紹介</a></li>
-                    <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
-                    <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
+                    <li><a href="/services.html" class="nav-link">Services</a></li>
+                    <li><a href="/about.html" class="nav-link">About us</a></li>
+                    <li><a href="/works.html" class="nav-link">Works</a></li>
+                    <li><a href="/blogs.html" class="nav-link">Column</a></li>
+                    <li><a href="/contact.html" class="nav-link contact-btn">Contact</a></li>
                 </ul>
             </nav>
             <div class="hamburger-menu">
@@ -43,11 +43,11 @@
     </header>
     <nav class="mobile-nav">
         <ul>
-            <li><a href="/services.html">サービス</a></li>
-            <li><a href="/about.html">会社情報</a></li>
-            <li><a href="/works.html">事例紹介</a></li>
-            <li><a href="/blogs.html">ブログ</a></li>
-            <li><a href="/contact.html">お問い合わせ</a></li>
+            <li><a href="/services.html">Services</a></li>
+            <li><a href="/about.html">About us</a></li>
+            <li><a href="/works.html">Works</a></li>
+            <li><a href="/blogs.html">Column</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <main class="services-page">
@@ -225,12 +225,12 @@
             </div>
             <div class="footer-nav">
                 <ul>
-                    <li><a href="/services.html">サービス</a></li>
-                    <li><a href="/about.html">会社情報</a></li>
-                    <li><a href="/works.html">事例紹介</a></li>
-                    <li><a href="/blogs.html">ブログ</a></li>
-                    <li><a href="/contact.html">お問い合わせ</a></li>
-                    <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
+                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="/about.html">About us</a></li>
+                    <li><a href="/works.html">Works</a></li>
+                    <li><a href="/blogs.html">Column</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="copyright">
